--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
-    "lodash.debounce": "^4.0.8",
-    "lodash.throttle": "^4.1.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
@@ -32,8 +31,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/lodash.throttle": "^4.1.9",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
