--- a/package.json
+++ b/package.json
@@ -1,50 +1,6 @@
 {
-  "name": "tmovies",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "author": "Sudeep Mahato",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@ctrl/react-adsense": "^1.8.0",
-    "@reduxjs/toolkit": "^2.2.1",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.5",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-ga4": "^2.1.0",
-    "react-icons": "^5.0.1",
-    "react-lazy-load-image-component": "^1.6.0",
-    "react-loading-skeleton": "^3.4.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
-    "swiper": "^11.0.6",
-    "tailwind-merge": "^2.2.0",
-    "usehooks-ts": "^2.9.1"
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.11.19",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-lazy-load-image-component": "^1.6.3",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-react-app": "^7.0.1",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3",
-    "vite-plugin-eslint": "^1.8.1"
+    "@types/lodash": "^4.14.202"
   }
 }
