--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "lodash": "^4.17.21",
     "@types/lodash": "^4.14.202"
   },
+  "devDependencies": {
+    "vite": "^5.0.0"
+  },
   "scripts": {
     "dev": "vite"
   }
