--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@types/lodash": "^4.14.202"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "scripts": {
     "dev": "vite"
