--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.202"
+    "@types/lodash": "^4.14.202",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite-plugin-eslint": "^1.8.1"
+    "vite-plugin-eslint": "^1.8.1",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17"
   },
   "scripts": {
     "dev": "vite"
