--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
     "lodash": "^4.17.21",
     "@types/lodash": "^4.14.202",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@ctrl/react-adsense": "^1.7.1",
+    "framer-motion": "^10.16.4",
+    "react-ga4": "^2.1.0",
+    "react-loading-skeleton": "^3.3.1",
+    "react-router-dom": "^6.18.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "swiper": "^11.0.3"
   },
   "devDependencies": {
     "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17"
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.31",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7"
   },
   "scripts": {
     "dev": "vite"
-  }
+  },
+  "type": "module"
 }
