--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.18.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "swiper": "^11.0.3"
+    "swiper": "^11.0.3",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.1.0",
+    "react-icons": "^4.12.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
@@ -20,7 +24,9 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.31",
     "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
+    "@types/react-dom": "^18.2.7",
+    "@types/react-icons": "^3.0.0",
+    "@types/usehooks-ts": "^2.0.5"
   },
   "scripts": {
     "dev": "vite"
