--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.1.0",
     "react-icons": "^4.12.0",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "react-lazy-load-image-component": "^1.6.0"
   },
   "devDependencies": {
     "vite": "^5.0.0",
@@ -26,7 +27,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-icons": "^3.0.0",
-    "@types/usehooks-ts": "^2.0.5"
+    "@types/usehooks-ts": "^2.0.5",
+    "@types/react-lazy-load-image-component": "^1.6.3"
   },
   "scripts": {
     "dev": "vite"
