--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.13",
     "eslint": "^8.42.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
