--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "Sudeep Mahato",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,7 +14,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
-    "lodash": "^4.17.21",
+    "lodash.throttle": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
@@ -27,7 +28,7 @@
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.202",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20.10.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
