--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ctrl/react-adsense": "^1.8.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.39.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
     "lodash.throttle": "^4.1.1",
